# rules_qemu

./: AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  RELEASING.md  go.mod
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yml  release.yml  release_prep.sh
agent/: BUILD.bazel  agent.go  agent_test.go
agentpb/: BUILD.bazel
qemu/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
qemu/private/: BUILD.bazel  cc_static_only.bzl  gmp.BUILD.bazel  json_glib.BUILD.bazel  libtasn1.BUILD.bazel  libtpms.BUILD.bazel  swtpm.BUILD.bazel  versions.bzl
tests/: BUILD.bazel  qemu_toolchain_test.bzl  verify.bzl  verify_service.sh  verify_tar.sh
tests/assertions/: agent_tar.txt
vm/: BUILD.bazel  agentconn.go  agentconn_test.go  config.go  disk_test.go  network.go  qemu.go  vm.go
