module(
    name = "rules_qemu",
    version = "0.1.0",
    compatibility_level = 0,
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "toolchain_utils", version = "1.3.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.2.0")

bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)

bazel_dep(name = "openssl", version = "3.5.5.bcr.0")
bazel_dep(name = "glib", version = "2.82.2.bcr.8")
