load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

configure_make(
    name = "gmp",
    configure_in_place = True,
    configure_options = [
        "--enable-static",
        "--disable-shared",
    ],
    lib_source = ":all_srcs",
    out_static_libs = ["libgmp.a"],
    visibility = ["//visibility:public"],
)
