load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")
load("@rules_qemu//qemu/private:cc_static_only.bzl", "cc_static_only")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

cc_static_only(
    name = "openssl_static",
    dep = "@openssl//:crypto",
)

cc_static_only(
    name = "glib_static",
    dep = "@glib//glib",
)

cc_static_only(
    name = "gobject_static",
    dep = "@glib//gobject",
)

cc_static_only(
    name = "gio_static",
    dep = "@glib//gio",
)

configure_make(
    name = "swtpm_build",
    autoreconf = True,
    autoreconf_options = ["-ivf"],
    configure_in_place = True,
    configure_options = [
        "--with-openssl",
        "--with-tpm2",
        "--without-cuse",
        "--without-selinux",
        "--without-seccomp",
        "--without-gnutls",
        "--enable-static",
        "--disable-shared",
        # These tools are checked by configure but only used by tests/scripts,
        # not during compilation. Stub them to pass the checks.
        "EXPECT=/bin/true",
        "GAWK=/usr/bin/gawk",
        "SOCAT=/bin/true",
        "BASE64=/usr/bin/base64",
        "CP=/bin/cp",
    ],
    env = {
        # Point pkg-config at stub .pc files for BCR-provided deps (glib, openssl).
        # BCR library names don't match pkg-config names (libglib.a vs libglib-2.0),
        # so stubs map the expected pkg-config module names to actual BCR archives.
        # Foreign_cc-built deps (libtpms, json-glib, libtasn1, gmp) have their
        # .pc files auto-generated by rules_foreign_cc.
        "PKG_CONFIG_PATH": "$$$$BUILD_TMPDIR$$$$/bcr_pkgconfig",
    },
    lib_source = ":all_srcs",
    out_binaries = [
        "swtpm",
        "swtpm_setup",
        "swtpm_ioctl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Source-built deps (chain .pc files via rules_foreign_cc)
        "@qemu_libtpms//:libtpms",
        "@qemu_json_glib//:json_glib",
        "@qemu_libtasn1//:libtasn1",
        "@qemu_gmp//:gmp",
        # BCR deps — wrapped to expose only static libraries
        ":glib_static",
        ":gobject_static",
        ":gio_static",
        ":openssl_static",
    ],
)

# Extract individual binaries via output_group for toolchain consumption.
# Each entry in out_binaries creates a named output group.
filegroup(
    name = "swtpm",
    srcs = [":swtpm_build"],
    output_group = "swtpm",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "swtpm_setup",
    srcs = [":swtpm_build"],
    output_group = "swtpm_setup",
    visibility = ["//visibility:public"],
)
